== Change Log

=== SVN
* Correct RenderTestHelper to better resemble expectations from Rails. [Sean Cribbs]
* Add model specs and scenarios. [John Long]
* Modify script/spec to work in instance mode. [Andrew O'Brien]
* Add RSpec to load path in test environment. [Andrew O'Brien]
* Add specs for Radiant::Extension and Radiant::Taggable. [Sean Cribbs]
* Fixed admin CSS for IE6 - ugly borders begone! [Bjørn Arild Mæland]
* Fixed that homepage is no longer cached outside of cache dir, but to
  "_site-root.data". [Bjørn Arild Mæland]
* Fix typo in pngfix.js. [Mislav Marohnić]
* Turn off auto-loading RSpec stuff, even in test environment.
  [Mislav Marohnić]
* Add specs for Annotatable, InheritableClassAttributes, LocalTime, 
  MethodObserver, and Simpleton. [Sean Cribbs]
* Add spec for Radiant::AdminUI and Users scenario. [Sean Cribbs]
* Import and create boilerplate for RSpec and Scenarios. [Sean Cribbs]
* Honor config.extensions when running rake test:extensions and also include
  core extensions. [Daniel Sheppard]
* Propagate global page when using <r:content /> with inherit attribute.
  [Sean Cribbs]

=== 0.6.4 Gem Shaper
* Extract Archive pages into a core extension. Add automatic testing of core 
  extensions from default test task. [Sean Cribbs]
* Add <r:if_children /> and <r:unless_children /> tags. [Andrew Neil]
* Add HTML labels to role checkboxes in user edit template. [zilkey]
* Cleanup whitespace and line-endings in environment.rb. [Bjørn Arild Mæland]
* Fix various SQL Server issues via Rails ticket #8886. [Mark Gallop]
* Refactor locals from _node.rhtml into Admin::NodeHelper. [Sean Cribbs]
* Fix XHTML validation errors in view templates. [Bjørn Arild Mæland]
* Update Prototype and script.aculo.us to 1.6 and 1.8 releases. [Sean Cribbs]
* Fix edge case in tabcontrol.js where tab label is incorrect. [Sean Cribbs]
* Remove duplication in admin.js. [Sean Cribbs]
* Factor TimeZone stuff out of Radiant::Config into a module, fix failing tests.
  [Sean Cribbs]