@@ -5,6 +5,7 @@ The following people have submitted changes which have been applied to the
 core:
 
 === SVN
+* Benny Degezelle
 * John Long
 * Andrew O'Brien
 * Bjørn Arild Mæland
